src/components/navbar/Navbar.css
nav {
	background: var(--black);
	padding: 1rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	font-size: 1.2rem;
	width: 100%;
	position: relative;
}

.home-link {
	height: 4rem;
	display: flex;
	align-items: center;
	color: #fff;
	text-decoration: none;
}

.logo {
	display: flex;
	height: 100%;
	width: 100%;
}

.title {
	margin: 0 0 0 1rem;
	white-space: nowrap;
}

.fa-leaf {
	margin-left: 0.5rem;
	font-size: 1.6rem;
	color: greenyellow;
}

.fa-bars {
	color: #fff;
}

.hamburger {
	display: block;
	cursor: pointer;
}

.nav-menu {
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	list-style: none;
	height: calc(100vh - 6rem);
	background: #313131;
	transform: translateX(-100%);
	transition: transform 750ms ease-in-out;
}

.nav-menu__active {
	transform: translateX(0);
}

.nav-menu li {
	height: 25%;
	padding: 0.2rem 0.4rem;
	margin: 3rem 0.5rem;
	border-radius: 4px;
	transition: background-color 250ms ease-out, color 250ms ease-out;
}

.nav-menu li:hover {
	background-color: #d1c1be;
}

.nav-menu a {
	color: #fff;
	text-decoration: none;
}

.nav-menu li:hover a {
	color: var(--black);
}

@media (min-width: 960px) {
	.hamburger {
		display: none;
	}

	.nav-menu {
		position: static;
		width: auto;
		margin: 0;
		padding: 0;
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		list-style: none;
		height: 100%;
		background: transparent;
		transform: none;
		transition: transform 0ms;
	}

	.nav-menu__active {
		transform: none;
	}

	.nav-menu li {
		height: auto;
		padding: 0.3rem 0.4rem;
		margin: 0 0.5rem;
		border-radius: 4px;
		transition: background-color 250ms ease-out, color 250ms ease-out;
	}
}

